footer and buggy contact page

--- a/aboutPageClean.html
+++ b/aboutPageClean.html
@@ -108,40 +108,10 @@
 
     
 
-    <!-- Footer -->
+       <!-- Footer -->
     <footer class="section-navy py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                <div>
-                    <h3 class="text-lg font-semibold mb-4">Texas PEVC</h3>
-                    <p class="text-gray-400">Connecting private equity and venture capital professionals across Texas.</p>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
-                    <ul class="space-y-2 text-gray-400">
-                        <li><a href="aboutPageClean.html" class="hover:text-white transition">About Us</a></li>
-                        <li><a href="boardPageClean.html" class="hover:text-white transition">Board</a></li>
-                        </ul>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-4">Contact</h3>
-                    <ul class="space-y-2 text-gray-400">
-                        <li><i class="fas fa-envelope mr-2"></i><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="7c15121a133c0819041d0f0c190a1f52130e1b">[email&#160;protected]</a></li>
-                        <li><i class="fas fa-phone mr-2"></i>(512) 555-0123</li>
-                        <li><i class="fas fa-map-marker-alt mr-2"></i>Austin, Texas</li>
-                    </ul>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
-                    <div class="flex space-x-4">
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-linkedin text-xl"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-twitter text-xl"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-facebook text-xl"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-instagram text-xl"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
+            <div class="border-t border-gray-800 pt-8 text-center text-gray-400">
                 <p>&copy; 2026 Texas PEVC. All rights reserved.</p>
             </div>
         </div>
