--- a/boardPageClean.html
+++ b/boardPageClean.html
@@ -256,60 +256,10 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section class="bg-gray-100 py-16">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="text-center">
-                <h2 class="text-3xl font-bold text-gray-900 mb-4">Contact the Board</h2>
-                <p class="text-lg text-gray-600 mb-8">For inquiries about board matters or governance issues</p>
-                <div class="flex justify-center space-x-4">
-                    <a href="/cdn-cgi/l/email-protection#cdafa2acbfa98db9a8b5acbebda8bbaee3a2bfaa" class="bg-orange-600 text-white px-6 py-3 rounded-lg hover:bg-orange-700 transition">
-                        <i class="fas fa-envelope mr-2"></i>Email Board
-                    </a>
-                    <a href="tel:+1-512-555-0123" class="bg-gray-600 text-white px-6 py-3 rounded-lg hover:bg-gray-700 transition">
-                        <i class="fas fa-phone mr-2"></i>Call Office
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
+       <!-- Footer -->
     <footer class="section-navy py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                <div>
-                    <h3 class="text-lg font-semibold mb-4">Texas PEVC</h3>
-                    <p class="text-gray-400">Connecting private equity and venture capital professionals across Texas.</p>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
-                    <ul class="space-y-2 text-gray-400">
-                        <li><a href="aboutPage.html" class="hover:text-white transition">About Us</a></li>
-                        <li><a href="boardPageClean.html" class="hover:text-white transition">Board</a></li>
-                        <li><a href="partnershipsPage.html" class="hover:text-white transition">Partnerships</a></li>
-                        <li><a href="networkPage.html" class="hover:text-white transition">Network</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-4">Contact</h3>
-                    <ul class="space-y-2 text-gray-400">
-                        <li><i class="fas fa-envelope mr-2"></i><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="533a3d353c1327362b3220233625307d3c2134">[email&#160;protected]</a></li>
-                        <li><i class="fas fa-phone mr-2"></i>(512) 555-0123</li>
-                        <li><i class="fas fa-map-marker-alt mr-2"></i>Austin, Texas</li>
-                    </ul>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
-                    <div class="flex space-x-4">
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-linkedin text-xl"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-twitter text-xl"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-facebook text-xl"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-instagram text-xl"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
+            <div class="border-t border-gray-800 pt-8 text-center text-gray-400">
                 <p>&copy; 2026 Texas PEVC. All rights reserved.</p>
             </div>
         </div>
