--- a/boardPageClean.html
+++ b/boardPageClean.html
@@ -9,20 +9,39 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-gray-50">
-
-<!-- Navigation -->
-<nav class="bg-white shadow-lg sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="flex justify-between h-16">
-            <div class="flex items-center">
-                <a href="index.html" class="flex items-center space-x-2">
-                    <img src="logo.jpg" alt="Texas PEVC Logo" class="h-8 w-auto">
-                    <span class="text-xl font-bold text-gray-900">Texas PEVC</span>
-                </a>
+    <!-- Navigation -->
+    <nav class="bg-white shadow-lg sticky top-0 z-50">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between h-16">
+                <div class="flex items-center">
+                    <a href="index.html" class="flex items-center space-x-2">
+                        <img src="logo.jpg" alt="Texas PEVC Logo" class="h-8 w-auto">
+                        <span class="text-xl font-bold text-gray-900">Texas PEVC</span>
+                    </a>
+                </div>
+                <div class="hidden md:flex items-center space-x-8">
+                    <a href="index.html" class="text-gray-700 hover:text-orange-600 px-3 py-2 rounded-md text-sm font-medium transition">Home</a>
+                    <a href="aboutPageClean.html" class="text-gray-700 hover:text-orange-600 px-3 py-2 rounded-md text-sm font-medium transition">About</a>
+                    <a href="boardPageClean.html" class="text-orange-600 border-b-2 border-orange-600 px-3 py-2 text-sm font-medium">Board</a>
+                    <a href="recruitmentPageClean.html" class="text-gray-700 hover:text-orange-600 px-3 py-2 rounded-md text-sm font-medium transition">Recruitment</a>
+                </div>
+                <div class="md:hidden flex items-center">
+                    <button id="mobile-menu-button" class="text-gray-700 hover:text-orange-600 focus:outline-none">
+                        <i class="fas fa-bars text-xl"></i>
+                    </button>
+                </div>
             </div>
         </div>
-    </div>
-</nav>
+        <!-- Mobile menu -->
+        <div id="mobile-menu" class="hidden md:hidden bg-white border-t">
+            <div class="px-2 pt-2 pb-3 space-y-1">
+                <a href="pevcHomeClean.html" class="block px-3 py-2 text-gray-700 hover:text-orange-600">Home</a>
+                <a href="aboutPageClean.html" class="block px-3 py-2 text-orange-600 font-medium">About</a>
+                <a href="boardPageClean.html" class="block px-3 py-2 text-gray-700 hover:text-orange-600">Board</a>
+                <a href="recruitmentPageClean.html" class="block px-3 py-2 text-gray-700 hover:text-orange-600">Recruitment</a>
+            </div>
+        </div>
+    </nav>
 
 <!-- Hero -->
 <section class="hero-section py-20">
