--- a/aboutPageClean.html
+++ b/aboutPageClean.html
@@ -35,7 +35,7 @@
         <!-- Mobile menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-white border-t">
             <div class="px-2 pt-2 pb-3 space-y-1">
-                <a href="pevcHomeClean.html" class="block px-3 py-2 text-gray-700 hover:text-orange-600">Home</a>
+                <a href="index.html" class="block px-3 py-2 text-gray-700 hover:text-orange-600">Home</a>
                 <a href="aboutPageClean.html" class="block px-3 py-2 text-orange-600 font-medium">About</a>
                 <a href="boardPageClean.html" class="block px-3 py-2 text-gray-700 hover:text-orange-600">Board</a>
                 <a href="recruitmentPageClean.html" class="block px-3 py-2 text-gray-700 hover:text-orange-600">Recruitment</a>
@@ -117,11 +117,23 @@
         </div>
     </footer>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
-        // Mobile menu toggle
-        document.getElementById('mobile-menu-button').addEventListener('click', function() {
-            const menu = document.getElementById('mobile-menu');
-            menu.classList.toggle('hidden');
+    <script>
+        // Mobile menu toggle with icon animation
+        const mobileMenuButton = document.getElementById('mobile-menu-button');
+        const mobileMenu = document.getElementById('mobile-menu');
+        const menuIcon = mobileMenuButton.querySelector('i');
+
+        mobileMenuButton.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+            
+            // Toggle between hamburger and X icon
+            if (mobileMenu.classList.contains('hidden')) {
+                menuIcon.classList.remove('fa-times');
+                menuIcon.classList.add('fa-bars');
+            } else {
+                menuIcon.classList.remove('fa-bars');
+                menuIcon.classList.add('fa-times');
+            }
         });
     </script>
 </body>
